== 2.0.0.alpha.5 / 2012-03-27
* Fix for HA/cluster bug [#173]
* Upgrade to neo4j-community jars 1.7.0.alpha.1
* Fix for rails 3.2 [#131]
* Fix for BatchInserter bug, [#139]
* Added rake task for upgrading [#116]
* Added scripts for upgrading database [#116]

== 2.0.0.alpha.4 / 2012-01-17
* Fix node and rel enumerable for JRuby 1.9, Dmytrii Nagirniak
* Remove the will_paginate and move it to a separate gem Dmytrii Nagirniak, [#129][#132]
* Use type converter to determine how to handle multi-param attributes, Dmyitrii Nagirniak [#97]
* Set default storage_path in Rails to db [#96]
* Fix numeric Converter with nils and Float converter, Dmytrii Nagirniak
* Fix Neo4j::Rails::Model.find incorrect behavior with negative numbers, Dmytrii Nagirniak [#101]
* Allow to use symbols in batch inserter [#104]
* Split neo4j-jars gem into three jars, community,advanced&enterprise

 == 2.0.0.alpha.1 / 2012-01-11
* Split JARS into a separate gem (neo4j-jars) [#115]
* Changed prefix of relationships so that it allows having incoming relationships from different classes with different relationship names. Migration is needed to update an already existing database - see issue #116. [#117]
* Fix for undefined method 'add_unpersited_outgoing_rel' [#111]
* Fix for Rails models named Property [#108] (Vivek Prahlad)


 == 1.3.1 / 2011-12-14
* Make all relationships visible in Rails callback (rspecs #87, Dmytrii Nagirniak) [#211]
* Enable travis to build JRuby 1.9 (pull #87, Dmytrii Nagirniak) [#214]
* Support for composite lucene queries with OR and NOT (pull #89, Deepak N)
* Enforce the correct converter on a property type when the type is given (pull #86, Dmytrii Nagirniak)
* Development: make it easier to run RSpecs and guard (pull #85, Dmytrii Nagirniak)
* Added ability to disable observer (pull #84, Dmytrii Nagirniak)
* Fixing multiple assignment of has_one assocaition (pull #83 Deepak N)
* Accept association_id for has_one assocations (pull #82, Deepak N)